--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Prepare Deployment Directory
         run: |
           mkdir -p deploy
-          cp ./build/libs/*.jar ./deploy/premier7-backend.jar
+          JAR_FILE=$(ls ./build/libs/*.jar | head -n 1)
+          cp "$JAR_FILE" ./deploy/premier7-backend.jar
           cp ./appspec.yml ./deploy/
           cp ./scripts/*.sh ./deploy/
 
