--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build --exclude-task test
 
+      - name: Add execute permission to scripts
+        run: chmod +x scripts/*.sh
+
       - name: Prepare Deployment Directory
         run: |
           mkdir -p deploy
