feat : cors 문제 안생기도록 doFilterChain 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=root1234!!
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
+
+spring.frontend.url=https://premier-seven.netlify.app
