--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.application.name=ps_backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/premier7
 spring.datasource.username=root
-spring.datasource.password=root1234!!
+spring.datasource.password=rows3690
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
 spring.frontend.url=https://premier-seven.netlify.app
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
